--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# OS X
+.DS_Store
+
 # Xcode
 #
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
@@ -29,6 +32,9 @@ DerivedData/
 *.ipa
 *.dSYM.zip
 *.dSYM
+
+## Bundler
+.bundle
 
 # CocoaPods
 #
